# cardfunfacts

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  upload_test_images.py
backend/: Dockerfile  config.py  main.py  pyproject.toml  test_upload.py
backend/api/: README.md  aircraft.py  sports_cars.py
backend/services/: minio_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Background.css  Background.jsx  GlassContainer.css  GlassContainer.jsx  HamburgerMenu.css  HamburgerMenu.jsx  ImageModal.css  ImageModal.jsx  Sidebar.css  Sidebar.jsx
frontend/src/data/: backgrounds.js
frontend/src/pages/: Home.css  Home.jsx  Jets.css  Jets.jsx  SportsCars.css  SportsCars.jsx
